k8s/aks-new/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cemp-api
  namespace: cemp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cemp-api
  template:
    metadata:
      labels:
        app: cemp-api
    spec:
      containers:
            - name: cemp-api
        image: adhivenkatesh7/cemp-api:v2  # <-- your DockerHub, NOT ACR
        ports:
                - containerPort: 8080
