k8s/aks-new/07-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  namespace: cemp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        fsGroup: 10001
      containers:
            - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
                - containerPort: 1433
        volumeMounts:
                - name: mssql-storage
          mountPath: /var/opt/mssql
      volumes:
            - name: mssql-storage
        persistentVolumeClaim:
          claimName: mssql-pvc
