k8s/aks-new/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cemp-api-service
  namespace: cemp
spec:
  selector:
    app: cemp-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
