k8s/aks-new/08-sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: cemp
spec:
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
  type: ClusterIP
