k8s/aks-new/05-ingress-aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cemp-ingress
  namespace: cemp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cemp.48.206.33.47.nip.io
      http:
      paths:
            - path: /
      pathType: Prefix
      backend:
          service:
            name: cemp-api-service
            port:
              number: 80
